app/registry/Namespace.yaml
---
# Registry namespace
kind: Namespace
apiVersion: v1
metadata:
  name: registry
  labels:
    name: registry
