app/registry/Service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: registry
  namespace: registry
spec:
  selector:
    app: docker-registry
  type: ClusterIP
  ports:
    - name: http
      port: 30001
      targetPort: 30001
