app/registry/Ingress.yaml
---
# Registry Ingress
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: registry
  namespace: registry
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: ingress-registry-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
    - secretName: ingress-tls
  rules:
    - host: docker-registry.jerra.io
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: registry
                port:
                  number: 30001
